# cart-iq

./: .gitignore  CARTIQ_ROADMAP.md  README.md  README_updated (1).md  docker-compose.yml  pyproject.toml
apps/analytics/: pyproject.toml
apps/analytics/app/: config.py  enums.py  routes.py  schemas.py
apps/dashboard/: index.html  package-lock.json
apps/dashboard/src/: App.tsx
apps/dashboard/src/features/analytics/: DashboardPage.tsx
apps/dashboard/src/features/infra/: LogTerminal.tsx
apps/dashboard/src/features/simulator/: SimulatorControl.tsx
apps/dashboard/src/layout/: Sidebar.tsx  TopBar.tsx
apps/ingestion/app/: routes.py
apps/processor/: pyproject.toml
apps/processor/app/: config.py  database.py  models.py
apps/simulator/: Dockerfile
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard-old/: desktop_design.html
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ChartsArea.tsx  InfraPage.tsx  KPICards.tsx  LiveFeed.tsx  Sidebar.tsx  TopBar.tsx
docs/: CARTIQ_ROADMAP.md  FRONTEND_CONTEXT.md  _antigravity-caveman-prompt.md_
scripts/: simulate_events.py
services/analytics/: Dockerfile  pyproject.toml
services/analytics/app/: config.py  enums.py  main.py  routes.py  schemas.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/app/: config.py  kafka_producer.py  main.py  routes.py  schemas.py
services/processor/: Dockerfile  pyproject.toml
services/processor/app/: agents.py  aggregators.py  enums.py  main.py
services/simulator/: simulate_events.py
tools/: simulate_events.py
