[project]
name = "processor"
version = "0.1.0"
description = ""
authors = [
    {name = "Chetanand Meher",email = "chetanandmeher1282004@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "redis (>=7.4.0,<8.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
