[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Chetanand Meher <chetanandmeher1282004@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.136.1,<0.137.0"
uvicorn = ">=0.46.0,<0.47.0"
redis = ">=7.4.0,<8.0.0"
asyncpg = ">=0.31.0,<0.32.0"
sqlalchemy = ">=2.0.49,<3.0.0"
pydantic-settings = ">=2.14.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"