[project]
name = "processor"
version = "0.1.0"
description = ""
authors = [
    {name = "Chetanand Meher",email = "chetanandmeher1282004@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "redis (>=7.4.0,<8.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "faust-streaming (>=0.11.3,<0.12.0)",
    "aiokafka (==0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
